test/errors/expressions_error/zs/isset_operators/integer_type_error.zs
package isset_operators.integer_type_error;

bitmask uint8 Bitmask
{
    READ, WRITE
};

struct EnumTypeError
{
    uint8 field;
    uint8 anotherField if isset(field, Bitmask.READ);
};
